--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,1 @@
-*.java linguist-detectable=true
-*.python linguist-detectable=false
-*.html linguist-detectable=false
-*.css linguist-detectable=false
-*.js linguist-detectable=false
+*.java linguist-language=Java
