--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
-*.java linguist-language=Java
+*.java linguist-detectable=true
+*.python linguist-detectable=false
+*.html linguist-detectable=false
+*.css linguist-detectable=false
+*.js linguist-detectable=false
